// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writeChangelog generates correct changelog in monorepo with groupChanges (grouped change FILES): bar CHANGELOG.json 1`] = `
{
  "entries": [
    {
      "comments": {
        "patch": [
          {
            "author": "test@testtestme.com",
            "comment": "comment from bar change ",
            "commit": "(sha1-0)",
            "package": "bar",
          },
        ],
      },
      "date": "(date)",
      "tag": "bar_v1.3.4",
      "version": "1.3.4",
    },
  ],
  "name": "bar",
}
`;

exports[`writeChangelog generates correct changelog in monorepo with groupChanges (grouped change FILES): bar CHANGELOG.md 1`] = `
"# Change Log - bar

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment from bar change  (test@testtestme.com)
"
`;

exports[`writeChangelog generates correct changelog in monorepo with groupChanges (grouped change FILES): foo CHANGELOG.json 1`] = `
{
  "entries": [
    {
      "comments": {
        "patch": [
          {
            "author": "test@testtestme.com",
            "comment": "comment 2",
            "commit": "(sha1-0)",
            "package": "foo",
          },
          {
            "author": "test@testtestme.com",
            "comment": "comment 1",
            "commit": "(sha1-1)",
            "package": "foo",
          },
          {
            "author": "test@testtestme.com",
            "comment": "additional comment 1",
            "commit": "(sha1-2)",
            "package": "foo",
          },
          {
            "author": "test@testtestme.com",
            "comment": "additional comment 2",
            "commit": "(sha1-3)",
            "package": "foo",
          },
        ],
      },
      "date": "(date)",
      "tag": "foo_v1.0.0",
      "version": "1.0.0",
    },
  ],
  "name": "foo",
}
`;

exports[`writeChangelog generates correct changelog in monorepo with groupChanges (grouped change FILES): foo CHANGELOG.md 1`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- comment 2 (test@testtestme.com)
- comment 1 (test@testtestme.com)
- additional comment 1 (test@testtestme.com)
- additional comment 2 (test@testtestme.com)
"
`;

exports[`writeChangelog generates correct changelog with changedir set: changelog json 1`] = `
{
  "entries": [
    {
      "comments": {
        "patch": [
          {
            "author": "test@testtestme.com",
            "comment": "comment 2",
            "commit": "(sha1-0)",
            "package": "foo",
          },
          {
            "author": "test@testtestme.com",
            "comment": "comment 1",
            "commit": "(sha1-1)",
            "package": "foo",
          },
          {
            "author": "test@testtestme.com",
            "comment": "additional comment 1",
            "commit": "(sha1-2)",
            "package": "foo",
          },
          {
            "author": "test@testtestme.com",
            "comment": "additional comment 2",
            "commit": "(sha1-3)",
            "package": "foo",
          },
        ],
      },
      "date": "(date)",
      "tag": "foo_v1.0.0",
      "version": "1.0.0",
    },
  ],
  "name": "foo",
}
`;

exports[`writeChangelog generates correct changelog with changedir set: changelog md 1`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- comment 2 (test@testtestme.com)
- comment 1 (test@testtestme.com)
- additional comment 1 (test@testtestme.com)
- additional comment 2 (test@testtestme.com)
"
`;

exports[`writeChangelog generates correct changelog: changelog json 1`] = `
{
  "entries": [
    {
      "comments": {
        "patch": [
          {
            "author": "test@testtestme.com",
            "comment": "comment 2",
            "commit": "(sha1-0)",
            "package": "foo",
          },
          {
            "author": "test@testtestme.com",
            "comment": "comment 1",
            "commit": "(sha1-1)",
            "package": "foo",
          },
          {
            "author": "test@testtestme.com",
            "comment": "additional comment 1",
            "commit": "(sha1-2)",
            "package": "foo",
          },
          {
            "author": "test@testtestme.com",
            "comment": "additional comment 2",
            "commit": "(sha1-3)",
            "package": "foo",
          },
        ],
      },
      "date": "(date)",
      "tag": "foo_v1.0.0",
      "version": "1.0.0",
    },
  ],
  "name": "foo",
}
`;

exports[`writeChangelog generates correct changelog: changelog md 1`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- comment 2 (test@testtestme.com)
- comment 1 (test@testtestme.com)
- additional comment 1 (test@testtestme.com)
- additional comment 2 (test@testtestme.com)
"
`;

exports[`writeChangelog generates correct grouped changelog when grouped change log is saved to the same dir as a regular changelog 1`] = `
"# Change Log - bar

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment 2 (test@testtestme.com)
"
`;

exports[`writeChangelog generates correct grouped changelog when grouped change log is saved to the same dir as a regular changelog 2`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- \`bar\`
  - comment 2 (test@testtestme.com)
- \`foo\`
  - comment 1 (test@testtestme.com)
"
`;

exports[`writeChangelog generates correct grouped changelog: bar CHANGELOG.md 1`] = `
"# Change Log - bar

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment 3 (test@testtestme.com)
- comment 2 (test@testtestme.com)
"
`;

exports[`writeChangelog generates correct grouped changelog: foo CHANGELOG.md 1`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- comment 1 (test@testtestme.com)
"
`;

exports[`writeChangelog generates correct grouped changelog: grouped CHANGELOG.md 1`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- \`bar\`
  - comment 3 (test@testtestme.com)
  - comment 2 (test@testtestme.com)
- \`foo\`
  - comment 1 (test@testtestme.com)
"
`;

exports[`writeChangelog generates grouped changelog without dependent change entries where packages have normal changes and dependency changes: bar CHANGELOG.md 1`] = `
"# Change Log - bar

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment 1 (test@testtestme.com)
- Bump baz to v1.3.4
"
`;

exports[`writeChangelog generates grouped changelog without dependent change entries where packages have normal changes and dependency changes: baz CHANGELOG.md 1`] = `
"# Change Log - baz

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment 1 (test@testtestme.com)
"
`;

exports[`writeChangelog generates grouped changelog without dependent change entries where packages have normal changes and dependency changes: grouped CHANGELOG.md 1`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- \`bar\`
  - comment 1 (test@testtestme.com)
- \`baz\`
  - comment 1 (test@testtestme.com)
"
`;

exports[`writeChangelog generates grouped changelog without dependent change entries: bar CHANGELOG.md 1`] = `
"# Change Log - bar

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- Bump baz to v1.3.4
"
`;

exports[`writeChangelog generates grouped changelog without dependent change entries: baz CHANGELOG.md 1`] = `
"# Change Log - baz

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment 1 (test@testtestme.com)
"
`;

exports[`writeChangelog generates grouped changelog without dependent change entries: grouped CHANGELOG.md 1`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- \`baz\`
  - comment 1 (test@testtestme.com)
"
`;
